# nemcss

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  cliff.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json
.changeset/: bright-cobras-argue.md  cool-foxes-fail.md  dry-months-add.md  eager-oranges-think.md  four-donkeys-march.md  frank-eagles-cover.md  funky-games-fry.md  gentle-beans-speak.md  honest-eels-accept.md  ready-ears-yell.md  rich-cougars-poke.md  tall-kids-agree.md  tangy-regions-see.md  tired-keys-dress.md  tough-bushes-report.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  ci.yml  docs.yml  release-core.yml  release-editor.yml  release-plugins.yml  release.yml
benchmark-reports/cli/: 2026-02-05_13-03-08_benchmark_without_concurrency_and_optims.md  2026-02-05_21-39-51_benchmark_with_rayon.md  2026-03-07_12-39-22_after_adding_semantic_system.md  2026-03-07_12-44-36_after_create_utility_refactoring.md
benchmark-reports/engine/: 2026-01-29_06-59-27_benchmark.md  2026-01-29_08-04-13_first_benchmark.md  2026-01-30_08-09-08_first_benchmark.md  2026-01-31_09-51-14_with_new_responsive_utilities.md  2026-01-31_10-56-11_with_new_responsive_utilities.md  2026-02-20_06-20-23_filters_before_refactoring_hashset.md  2026-02-20_06-30-21_filters_after_refactoring_hashset.md  2026-03-07_12-39-15_after_adding_semantic_system.md
class_extractor/: Cargo.toml
class_extractor/src/: extractor.rs  lib.rs
cli/: Cargo.toml
cli/benches/: build_command.rs
cli/src/: lib.rs
cli/src/commands/: init.rs  mod.rs
cli/src/commands/watch/: command.rs  mod.rs  paths.rs  watcher.rs
cli/src/templates/: spacings.json
cli/tests/: build_command.rs  integration.rs
config/: Cargo.toml
config/src/: config.rs  lib.rs
config/src/tokens/: mod.rs  resolver.rs  token.rs  utilities.rs
config/tests/: integration.rs
config/tests/fixtures/autodetection_tokens/: nemcss.config.json
config/tests/fixtures/autodetection_tokens/design-tokens/: colors.json  fonts.json
config/tests/fixtures/basic/: nemcss.config.json
config/tests/fixtures/default_and_overrides_combination/: nemcss.config.json
config/tests/fixtures/default_and_overrides_combination/design-tokens/: colors.json
crates/cli/: Cargo.toml
crates/cli/benches/: build_command.rs
crates/cli/src/: lib.rs  main.rs
crates/cli/src/commands/: init.rs  mod.rs  schema.rs
crates/cli/src/commands/new_token_file/: command.rs  error.rs  interactive.rs  mod.rs  scale.rs
crates/cli/src/commands/watch/: command.rs  paths.rs  watcher.rs
crates/cli/src/templates/: colors.json  nemcss.config.json
crates/cli/tests/: build_command.rs  integration.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  lib.rs  schema.rs
crates/config/src/tokens/: mod.rs  resolver.rs  token.rs  utilities.rs
crates/config/tests/: integration.rs
crates/config/tests/fixtures/basic/: nemcss.config.json
crates/config/tests/fixtures/empty_theme/: nemcss.config.json
crates/config/tests/fixtures/error_invalid_json/: nemcss.config.json
crates/config/tests/fixtures/error_missing_prefix/: nemcss.config.json
crates/config/tests/fixtures/error_missing_source_file/: nemcss.config.json
crates/config/tests/fixtures/error_unregistered_token_file/: nemcss.config.json
crates/config/tests/fixtures/error_unregistered_token_file/design-tokens/: spacings.json
crates/config/tests/fixtures/explicit_tokens_with_custom_utils/: nemcss.config.json
crates/config/tests/fixtures/explicit_tokens_with_custom_utils/design-tokens/: allspacings.json
crates/config/tests/fixtures/no_utilities_set/: nemcss.config.json
crates/config/tests/fixtures/registered_tokens/: nemcss.config.json
crates/engine/: Cargo.toml
crates/engine/benches/: css_generation.rs
crates/engine/src/: generation.rs  lib.rs
crates/engine/src/generation/: filters.rs  responsive.rs  semantic.rs  utilities.rs
crates/extractor/: Cargo.toml
crates/lsp/: Cargo.toml
crates/lsp/src/: cache.rs  context.rs  diagnostics.rs  doc_context.rs  file.rs  lib.rs  main.rs  position.rs
crates/lsp/tests/: basic.rs  completion.rs  file_watchers.rs  hover.rs
crates/lsp/tests/common/: mod.rs
crates/lsp/tests/fixtures/basic_project/: README.md  nemcss.config.json
crates/lsp/tests/fixtures/basic_project/design-tokens/: viewports.json
crates/lsp/tests/fixtures/basic_project/src/: app.css  index.html
crates/lsp/tests/fixtures/semantic_project/: nemcss.config.json
crates/lsp/tests/fixtures/semantic_project/design-tokens/: colors.json
crates/lsp/tests/fixtures/semantic_project/src/: index.html
crates/lsp/tests/snapshots/: basic__initialize_returns_capabilities.snap  completion__completion_suggests_custom_properties_in_var_context.snap  completion__did_change_updates_document_for_completion.snap  file_watchers__hover_shows_css_for_utility_class_after_design_token_file_change.snap  hover__hover_shows_css_for_responsive_class.snap  hover__hover_shows_css_for_utility_class.snap  hover__hover_shows_value_for_custom_property.snap
crates/napi/: CHANGELOG.md  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
crates/napi/__test__/: index.spec.ts
crates/napi/__test__/fixtures/: nemcss.config.json
crates/napi/__test__/fixtures/design-tokens/: colors.json  spacing.json
crates/napi/benchmark/: bench.ts
crates/napi/src/: lib.rs
docs/: index.md
docs/.vitepress/: config.mts
docs/editor/: config-autocomplete.md  index.md
docs/examples/: astro.md  react-spa.md  vanilla.md
docs/guide/: configuration.md  design-tokens.md  framework-support.md  getting-started.md  introduction.md
docs/integrations/: cli.md  postcss.md  vite.md
editors/vscode/: CHANGELOG.md  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json
engine/: Cargo.toml
engine/benches/: css_generation.rs
engine/src/: generation.rs  lib.rs
scanner/: Cargo.toml
scripts/: release.mjs  run_benchmark.sh  update-schema.sh  version.mjs
(+27 files in other folders)
