[workspace]
members = ["config"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Olivia Coumans"]
description = "NemCSS generates CSS utility classes and custom properties based on your design tokens."

[workspace.dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.18"
