[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Olivia Coumans"]
description = "NemCSS generates CSS utility classes and custom properties based on your design tokens."

[workspace.dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
regex = "1.12.2"
globset = "0.4.18"

[profile.release]
lto = true

[profile.release.package.lsp]
opt-level = "s"
strip = true

[profile.release.package.cli]
opt-level = "s"
strip = true
