[package]
name = "cli"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[[bin]]
name = "nemcss"
path = "src/main.rs"

[lib]
name = "cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
miette = { workspace = true }
owo-colors = "4.2.3"
thiserror = { workspace = true }
