[package]
name = "cli"
edition = "2024"
version = "0.1.0"
authors.workspace = true
description.workspace = true

[[bin]]
name = "nemcss"
path = "src/main.rs"

[lib]
name = "cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
miette = { workspace = true }
owo-colors = "4.2.3"
thiserror = { workspace = true }
config = { path = "../config" }

[dev-dependencies]
assert_cmd = "2.1.2"
assert_fs = "1.1.3"
predicates = "3.1.3"
serde_json = { workspace = true }
