[package]
name = "config"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
miette = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.24.0"
