[package]
name = "cli"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[[bin]]
name = "nemcss"
path = "src/main.rs"

[lib]
name = "cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
miette = { workspace = true }
owo-colors = "4.3.0"
thiserror = { workspace = true }
config = { path = "../config" }
engine = { path = "../engine" }
extractor = { path = "../extractor" }
ignore = "0.4.25"
globset = { workspace = true }
rayon = "1.11.0"
notify-debouncer-full = "0.7.0"
notify = "8.2.0"
ctrlc = "3.5.2"

[dev-dependencies]
assert_cmd = "2.1.2"
assert_fs = "1.1.3"
predicates = "3.1.4"
serde_json = { workspace = true }
divan = "0.1.21"
rand = "0.10.0"

[[bench]]
name = "build_command"
harness = false

