[package]
name = "config"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
globset = { workspace = true }

[dev-dependencies]
tempfile = "3.25.0"
