[package]
name = "engine"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
config = { path = "../config" }
miette = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
divan = "0.1.21"

[[bench]]
name = "css_generation"
harness = false
