[package]
name = "lsp"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "lsp"
path = "src/lib.rs"

[[bin]]
name = "nemcss-lsp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.51.0", features = ["full"] }
tower-lsp = "0.20.0"
config = { path = "../config" }
engine = { path = "../engine" }
extractor = { path = "../extractor" }
dashmap = "6.1.0"
miette = { workspace = true }
thiserror = { workspace = true }
globset = { workspace = true }
serde_json = { workspace = true }
ropey = "1.6.1"
regex = { workspace = true }

[dev-dependencies]
assert_fs = "1.1.3"
insta = { version = "1.47.2", features = ["json"] }
tower = { version = "0.5.3", features = ["util"] }
