[package]
name = "nemcss-napi"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.8.4"
napi-derive = "3.5.3"
config = { path = "../config" }
extractor = { path = "../extractor" }
engine = { path = "../engine" }

[build-dependencies]
napi-build = "2"
